tests/compile-fail/Rule_9_4.rs
#[derive(Debug)]
struct Once {
    a: i32,
}

fn main() {
    let _ = Once { a: 1, a: 2 };
    //~^ ERROR field `a` specified more than once

}
